--- a/Localize/ES/SeasonTitle.json
+++ b/Localize/ES/SeasonTitle.json
@@ -42,7 +42,7 @@
     },
     {
       "id": "season_filter_4",
-      "content": "Temporada 4"
+      "content": "<size=80%>Temporada 4</size>"
     }
   ]
 }
