--- a/Localize/ES/IAPProduct.json
+++ b/Localize/ES/IAPProduct.json
@@ -224,6 +224,21 @@
       "id": 153,
       "name": "Monthly EXP Pack III",
       "desc": "A monthly offer that contains the following:\n\n· Identity Training Ticket IV x250\n· Identity Training Ticket III x144"
+    },
+    {
+      "id": 202,
+      "name": "Full Moon 2024\nCommemorative\nID Upgrade Pack",
+      "desc": "A limited Full Moon 2024 Campaign Commemorative Pack. Contains the following items:\n\n· Takeoff Module - ID Uptie x1\n· Identity Training Ticket IV x80\n\n※ Using the Takeoff Module - ID Uptie raises the selected Identity's Uptie Tier to 4."
+    },
+    {
+      "id": 203,
+      "name": "Full Moon 2024\nCommemorative\nE.G.O Upgrade Pack",
+      "desc": "A limited Full Moon 2024 Campaign Commemorative Pack. Contains the following items:\n\n· Decaextraction Ticket x3\n· Takeoff Module - E.G.O Spinning [WAW] x1\n\n※ Using the Takeoff Module - E.G.O Spinning [WAW] raises the selected E.G.O's Threadspinning tier to 4. (Usable only on E.G.Os WAW Level or lower)"
+    },
+    {
+      "id": 204,
+      "name": "Full Moon 2024\nCommemorative\nComplete Pack",
+      "desc": "A limited Full Moon 2024 Campaign Commemorative Pack. Contains the following items:\n\n· Decaextraction Ticket x4\n· Takeoff Module - ID Uptie x1\n· Takeoff Module - E.G.O Spinning [WAW] x1\n· Identity Training Ticket IV x80\n· Threads x100\n\n※ Using the Takeoff Module - ID Uptie raises the selected Identity's Uptie Tier to 4.\n\n※ Using the Takeoff Module - E.G.O Spinning [WAW] raises the selected E.G.O's Threadspinning tier to 4. (Usable only on E.G.Os WAW Level or lower)"
     }
   ]
 }
