--- a/Localize/ES/IAPProduct.json
+++ b/Localize/ES/IAPProduct.json
@@ -239,6 +239,11 @@
       "id": 204,
       "name": "Full Moon 2024\nCommemorative\nComplete Pack",
       "desc": "A limited Full Moon 2024 Campaign Commemorative Pack. Contains the following items:\n\n· Decaextraction Ticket x4\n· Takeoff Module - ID Uptie x1\n· Takeoff Module - E.G.O Spinning [WAW] x1\n· Identity Training Ticket IV x80\n· Threads x100\n\n※ Using the Takeoff Module - ID Uptie raises the selected Identity's Uptie Tier to 4.\n\n※ Using the Takeoff Module - E.G.O Spinning [WAW] raises the selected E.G.O's Threadspinning tier to 4. (Usable only on E.G.Os WAW Level or lower)"
+    },
+    {
+      "id": 401,
+      "name": "Back to Office Pack",
+      "desc": "A limited package for returning managers. Contains the following items:\n※ This item is only visible to returning users, and can be purchased only during the return event period.\n\n· Extraction Ticket x5\n· Identity Training Ticket IV x45\n· Thread x100"
     }
   ]
 }
