--- a/Localize/ES/SeasonTitle-a1c7.json
+++ b/Localize/ES/SeasonTitle-a1c7.json
@@ -6,7 +6,7 @@
     },
     {
       "id": "start_mp_changed",
-      "content": "Entrada PC {1} {0}"
+      "content": "Al Entrar PC {1} {0}"
     },
     {
       "id": "new_season_former_global_growth_piece_to_current_piece_desc",
